Fixed White bar on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,12 @@ html {
     width: 100%;
     height: 100%;
 }
-html::-webkit-scrollbar {
-    display:none;
-}
 
 body{
     padding-top: 50px;
     width: 100%;
     height: 100%;
 }
-
 .home-background { 
         background-image: url("Images/backgroundwebsite.jpeg");
         height: 100%;
